--- a/gb/18/10/25/n10807479.md
+++ b/gb/18/10/25/n10807479.md
@@ -1,58 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zmipil285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zmipil285/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zmipil285/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zmipil285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>罗东圣母医院为伤者祈福  系黄丝带</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/7545b725d758004ddc7513b726b66a82-600x400.jpg" />
 <h6>罗东圣母医院发起祈福活动，邀请民众在门诊大楼外风雨走廊，为所有的伤患系上祝福的黄丝带。（罗东圣母医院提供）
 </h6>
 <hr>
-<p>【大纪元2018年10月25日讯】（大纪元记者谢月琴台湾宜兰报导）台铁6432普悠玛号列车，21日下午在新马车站出轨翻覆造成18死上百人受伤，有38人被送往罗东<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E5%9C%A3%E6%AF%8D%E5%8C%BB%E9%99%A2.md#1">圣母医院</a>抢救，目前还有9人在院治疗，其中有5为仍在加护病房。为了帮伤患<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E7%A5%88%E7%A6%8F.md#1">祈福</a>，院方10月24日发起“系上祝福的丝带”的活动，邀民众前来，在医院墙上系上充满祈祷文字的<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E9%BB%84%E4%B8%9D%E5%B8%A6.md#1">黄丝带</a>，大家也齐聚在中庭花园，不分彼此，共同集气。正式<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E7%A5%88%E7%A6%8F.md#1">祈福</a>活动将会在26日上午10点举行。</p>
-<figure id="attachment_10807483" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/10/82920ed5609ed6e9b3317607415582bf.jpg"><img class="size-medium wp-image-10807483" src="https://i.epochtimes.com/assets/uploads/2018/10/82920ed5609ed6e9b3317607415582bf-450x337.jpg" alt="" width="450" b="337" /></a><figcaption class="wp-caption-text">众人在<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E5%9C%A3%E6%AF%8D%E5%8C%BB%E9%99%A2.md#1">圣母医院</a>神父带领下于中庭花园，举办玫瑰经祈福礼为伤患祝祷。（罗东圣母医院提供）</figcaption></figure>
+<p>【大纪元2018年10月25日讯】（大纪元记者谢月琴台湾宜兰报导）台铁6432普悠玛号列车，21日下午在新马车站出轨翻覆造成18死上百人受伤，有38人被送往罗东<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%A3%E6%AF%8D%E5%8C%BB%E9%99%A2.md#1">圣母医院</a>抢救，目前还有9人在院治疗，其中有5为仍在加护病房。为了帮伤患<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%88%E7%A6%8F.md#1">祈福</a>，院方10月24日发起“系上祝福的丝带”的活动，邀民众前来，在医院墙上系上充满祈祷文字的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BB%84%E4%B8%9D%E5%B8%A6.md#1">黄丝带</a>，大家也齐聚在中庭花园，不分彼此，共同集气。正式<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%88%E7%A6%8F.md#1">祈福</a>活动将会在26日上午10点举行。</p>
+<figure id="attachment_10807483" aria-describedby="caption-attachment-10807483" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/82920ed5609ed6e9b3317607415582bf.jpg"><img class="size-medium wp-image-10807483" src="https://i.epochtimes.com/assets/uploads/2018/10/82920ed5609ed6e9b3317607415582bf-450x337.jpg" alt="" width="450" b="337" /></a><figcaption id="caption-attachment-10807483" class="wp-caption-text">众人在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%A3%E6%AF%8D%E5%8C%BB%E9%99%A2.md#1">圣母医院</a>神父带领下于中庭花园，举办玫瑰经祈福礼为伤患祝祷。（罗东圣母医院提供）</figcaption></figure>
 <p>院方指出，21日当天，医院共收治38位伤患，2位到院无生命迹象、4位加护病房、7位普通病房、22位轻伤治疗后出院、2位因地缘关系转院、1位急诊留观。由于多位病人有多重器官严重损伤，因此本院同步成立‘普悠玛事件医疗急救专案小组’。经过两天急救，目前医院仍有5位收置加护病房照护、4位收置普通病房照护。</p>
 <p>院方表示，加护病房患者中，有一位病人因脑出血、多处骨折仍昏迷中，目前仍持续抢救中；另有2位病人分别为颈部、胸部脊椎骨骨折；2位病人有严重肝脏损伤。这5位病人中，有4位病人同时合并严重的多处肋骨骨折以及气血胸，均在当天晚上紧急放置胸管，目前肺部状况稳定，但是仍必须持续呼吸照护及呼吸复健治疗。</p>
-<p>本意外事件病人均有严重创伤症候群，医院已启动关怀机制，由身心科副院长郭约瑟带领心理师、社工师等，积极进行心理支持及辅导。另外为祈祷所有患者能早日康复，天主教灵医会神父带领医院同仁假中庭花园，举办玫瑰经祈福礼，同时邀请院内同仁及民众在门诊大楼外风雨走廊，为所有的伤患系上祝福的<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E9%BB%84%E4%B8%9D%E5%B8%A6.md#1">黄丝带</a>，“希望伤痛能赶快过去，还给受伤的病患、家属及社会大众一个平静、平安的生活，我们用心祈祷！”◇</p>
+<p>本意外事件病人均有严重创伤症候群，医院已启动关怀机制，由身心科副院长郭约瑟带领心理师、社工师等，积极进行心理支持及辅导。另外为祈祷所有患者能早日康复，天主教灵医会神父带领医院同仁假中庭花园，举办玫瑰经祈福礼，同时邀请院内同仁及民众在门诊大楼外风雨走廊，为所有的伤患系上祝福的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BB%84%E4%B8%9D%E5%B8%A6.md#1">黄丝带</a>，“希望伤痛能赶快过去，还给受伤的病患、家属及社会大众一个平静、平安的生活，我们用心祈祷！”◇</p>
 <p>责任编辑：尚颖</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/18/1/10/n10044744.md#1">伟联科技捐赠 4部行动牙科设备PDE 给罗东圣母</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/18/6/14/n10483570.md#1">需要我的地方就是家乡 意大利神父奉献台湾半世纪</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/18/7/18/n10571627.md#1">共好启航 共照成立“圣母共好合作团队”启航</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/18/9/6/n10694985.md#1">疗愈影像 廖泰基摄影展义卖开展</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/22/n11962998.md#1">林姿妙视察梅洲大排改善工程 推水环境永续</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11958775.md#1">交通部航港局:国籍船员入境需居家检疫</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11958213.md#1">礁溪乡清洁队 将废玻璃瓶改造成艺术品</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11958036.md#1">疫情升温  林右昌：严谨、超前方式应对疫情</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/19/n11954340.md#1">加强防疫 花莲县府禁止公务员出国</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/19/n11953873.md#1">Dyson送空气清净机  林右昌：妥善用于防疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/1/10/n10044744.md#1">伟联科技捐赠 4部行动牙科设备PDE 给罗东圣母</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/14/n10483570.md#1">需要我的地方就是家乡 意大利神父奉献台湾半世纪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/7/18/n10571627.md#1">共好启航 共照成立“圣母共好合作团队”启航</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/6/n10694985.md#1">疗愈影像 廖泰基摄影展义卖开展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679159.md#1">环游世界玩数学来台东 带学生体验数学奥妙</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678938.md#1">翘班喝酒造成破口　基市警局：痛心、究责</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678492.md#1">基隆增10例 林右昌：加设三个筛检站</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678288.md#1">台东28日新增2确诊 关山池上加开快筛站</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677756.md#1">海大也传老师确诊 学校紧急停课</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676521.md#1">凉亭被震垮 1柱仅1钢筋 花检查偷工减料</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/16/n10061474.md#1" target="_blank">“不学ABC 能做接班人”的张玉勤</a></li><li><a href="https://github.com/zmipil285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10439090.md#1" target="_blank">严家伟：滥杀无辜草菅人命的“镇反运动”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/8/n10699044.md#1" target="_blank">美国女学者修炼奇缘(上) 脱胎换骨的改变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11960837.md#1">中共声称疫情“零增长” 民众揭背后真相</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11959037.md#1">甄子丹携妻小自美返港 戴电子手环强制隔离</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11959858.md#1">范丞丞爆范冰冰糗事：姐姐因被误会遭父母打</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/10/n11929076.md#1">天地清明引(234) 降天罪－琼林鏖战4</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zmipil285/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zmipil285/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/25/n10807479.htm">罗东圣母医院为伤者祈福  系黄丝带</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/25/n10807479.htm">罗东圣母医院为伤者祈福  系黄丝带</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zmipil285/djy/blob/master/gb/18/10/25/n10807479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zmipil285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zmipil285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zmipil285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/10/25/n10807479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
